@@ -18,6 +18,10 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
+2003-10-13  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/ia64/diveby3.asm: New file.
+
 2003-10-13  Kevin Ryde  <kevin@swox.se>
 
 	* mpn/powerpc32/mod_34lsub1.asm: New file.
